--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^1.4.2
   logger: ^1.3.0
   percent_indicator: ^4.0.1
+  video_player: ^2.1.11
 
 dev_dependencies:
   flutter_test:
