--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   logger: ^1.3.0
   percent_indicator: ^4.0.1
   video_player: ^2.1.11
+  stop_watch_timer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
